# Vibe-Sync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.bat  vibe_config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/vibe_sync/: __init__.py  cli.py  data_manager.py  monitor.py  server.py  utils.py
